<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AboutFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/aboutText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/about_text"

            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aboutTextAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="bottom"
            android:text="@string/about_autor"

            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aboutTextVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/about_version"

            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aboutTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="bottom"
            android:text="@string/about_email"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aboutTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="bottom"
            android:text="@string/about_description"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>